ArangoDB: expose driver from ArangoDBBucketManager and ArangoDBDocumentManager
(cherry picked from commit 3640d396c5ae050ed03fc365b792b1008ba1369b)
Signed-off-by: Maximillian Arruda <dearrudam@gmail.com>